--- a/gitbook-manifest.yaml
+++ b/gitbook-manifest.yaml
@@ -7,7 +7,7 @@ description: Connect your GitBook site to Scarf
 externalLinks:
     - label: Website
       url: https://about.scarf.sh/
-visibility: public
+visibility: unlisted
 script: ./src/index.ts
 # The following scope(s) are available only to GitBook Staff
 # See https://developer.gitbook.com/integrations/configurations#scopes
