--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
         "@gitbook/runtime": "*"
     },
     "devDependencies": {
+        "@cloudflare/workers-types": "*",
         "@gitbook/cli": "^0.22.0",
         "@gitbook/tsconfig": "*",
-        "@cloudflare/workers-types": "*"
+        "@types/node": "^24.0.4",
+        "typescript": "^5.1.6",
+        "typescript-language-server": "^4.3.4"
     }
 }
